fixed front page header spacing

--- a/index.css
+++ b/index.css
@@ -138,13 +138,13 @@ a.active img {
 
 .roxy_pic img {
   display: block;
-  max-width: 9%;
-  max-height: 9%;
+  max-width: 180px;
+  max-height: 180px;
   box-shadow: 0px 0px 0px 0px black, 0px 0px 0px 0px black;
   margin-right: 40px;
   float: right;
   transition: 0.7s all;
-  margin-top: -10%;
+  margin-top: -150px;
   display: inline-flex;
 }
 
@@ -203,6 +203,17 @@ p {
   max-width: 350px;
   flex: auto;
 }
+
+.flex-container1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 10px;
+  margin-left: 15%;
+  margin-right: 47%;
+}
+
+
 
 hr {
   margin-left: 2%;
